--- a/Preview/m_idntimes/index.html
+++ b/Preview/m_idntimes/index.html
@@ -1254,7 +1254,7 @@ src="https://www.facebook.com/tr?id=1697620290477743&ev=PageView
             <div class="article-v2-wrapper">
                                     <div class="wrapper-ads leaderboard-ads-wrapper">
                                         <a href="https://www.instagram.com/tpnganjarmahfud" target="_blank">
-                                            <img src="https://adopsidn.github.io/IDNMediahttps://www.idntimes.com/assets/Banner/paslon3_300x250.jpeg" style="max-width: 300px; height: auto;">
+                                            <img src="https://adopsidn.github.io/IDNMedia/assets/Banner/paslon3_300x250.jpeg" style="max-width: 300px; height: auto;">
                                           </a>
 </div>                    </div>
                 
